microservices/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  rules:
    - host: grafana.project.space
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                number: 3000
    - host: prometheus.project.space
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: prometheus-server
              port:
                number: 9090
